<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cloud_download_height"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/cloud_download_image"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cloud_download"
        app:tint="@color/lavendar" />

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:button_text="@string/download"
        app:text_color="@color/white"
        app:button_background="@color/colorPrimary"
        app:bar_background="@color/colorPrimaryDark"
        app:arc_background="@color/colorAccent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radio_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/radio_glide_text"
            android:textSize="@dimen/default_text_size"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_udacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/radio_udacity_text"
            android:textSize="@dimen/default_text_size"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radio_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/radio_retrofit_text"
            android:textSize="@dimen/default_text_size"
            android:onClick="onRadioButtonClicked" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>